# TorusParticles

./: .gitignore  BallSimulation.sln  CMakeLists.txt  README.md  TODO.txt
BallSimulation/: BallSimulation.vcxproj  BallSimulation.vcxproj.filters  BruteForceMultithreadSolver.hpp  BruteForceSolver.cpp  BruteForceSolver.hpp  Cell.hpp  Endpoints.hpp  GLDebug.h  GLVertex.h  GLVertex.hpp  Main.cpp  PruneAndSweep1DSolver.cpp  PruneAndSweep1DSolver.hpp  PruneAndSweep2DSolver.cpp  PruneAndSweep2DSolver.hpp  PruneAndSweepSolver.cpp  PruneAndSweepSolver.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  Simulation.cpp  Simulation.h  Solver.cpp  Solver.hpp  SpatialHashSolver.cpp  SpatialHashSolver.hpp  State.cpp  State.hpp  SweepAndPrune1DSolver.cpp  SweepAndPrune1DSolver.hpp  Vec2.hpp  Window.cpp  Window.h  Window.hpp  World.hpp  ball.h  ball.hpp  (+10 more)
BallSimulation/Debug/: BallSimulation.exe.recipe  BallSimulation.ilk  vc143.idb
BallSimulation/Debug/BallSimulation.tlog/: BallSimulation.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BallSimulation/Release/: BallSimulation.exe.recipe  BallSimulation.iobj  BallSimulation.ipdb
BallSimulation/Release/BallSimulation.tlog/: BallSimulation.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BallSimulation/x64/Debug/: BallSimulation.exe.recipe  BallSimulation.ilk  vc143.idb
BallSimulation/x64/Debug/BallSimulation.tlog/: BallSimulation.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dependencies/GLEW/include/: include - Shortcut.lnk
presets/: preset1.json  preset2.json  preset3.json  preset4.json  preset5.json  preset6.json
res/: preset1.json  preset2.json  preset4.json
src/: Main.cpp  main.cpp
src/graphics/: GLDebug.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/graphics/shaders/: shader.fs  shader.vs  shaderNoAA.fs
src/physics/: Ball.hpp  BallType.hpp  BruteForceMultithreadSolver.cpp  BruteForceMultithreadSolver.hpp  BruteForceSolver.cpp  BruteForceSolver.hpp  Endpoints.hpp  Solver.cpp  Solver.hpp  SpatialHashSolver.cpp  SpatialHashSolver.hpp  SweepAndPrune1DSolver.cpp  SweepAndPrune1DSolver.hpp  Vec2.hpp  World.hpp
src/physics/BruteForceMultithreadSolver/: BruteForceMultithreadSolver.cpp  BruteForceMultithreadSolver.hpp
src/physics/BruteForceSolver/: BruteForceSolver.cpp
src/physics/SpatialHashSolver/: Cell.hpp  SpatialHashSolver.cpp  SpatialHashSolver.hpp
src/physics/SweepAndPrune1DSolver/: Endpoints.hpp  Queue.hpp  SweepAndPrune1DSolver.cpp  SweepAndPrune1DSolver.hpp
src/utils/: Preset.hpp  loadPreset.cpp  loadPreset.hpp
